--- a/shf-clas.html
+++ b/shf-clas.html
@@ -4,9 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SHF-Ecommerce</title>
+    <style>
+        table{
+            border-collapse: collapse;
+            border: solid black;
+            margin-left: 30%;
+        }
+        th,td{
+           border: solid black;
+           padding: 1% 15px;
+        }
+
+        
+    </style>
 </head>
 <body>
     <h2>This is first class practice in Serve human foundation</h2>
+     <table>
+         <thead>
+             <tr>
+                 <th>No</th>
+                 <th>Name</th>
+                 <th>Company</th>
+                 <th>Salary</th>
+             </tr>
+         </thead>
+         <tr>
+        <td>1</td>
+        <td>Musa prince</td>
+        <td>Gun air</td>
+        <td>2 core</td>
+         </tr>
+         <tr>
+             <td>2</td>
+             <td>Daud ibrahim</td>
+             <td>Don giri</td>
+             <td>1 Core</td>
+         </tr>
+         <tr>
+             <td>3</td>
+             <td>Steve </td>
+             <td>Apple</td>
+             <td>1.5 Core</td>
+
+         </tr>
+         <tr>
+             <td>4</td>
+             <td>Elon mask</td>
+             <td>Tesla,Space x</td>
+             <td>5 Core</td>
+         </tr>
+     </table>
 
 </body>
 </html>
